# src/index.js
@@ -10,7 +10,7 @@ import axios from "axios";
 import cookieParser from "cookie-parser";  // cookie-parser 추가
 import { googleStrategy } from "./auth.config.js";
 import authenticateJWT from "./jwtMiddleware.js";
-import { handleAddBook } from "./controllers/book.controller.js";
+import { handleAddBook, handleGetUserActivity } from "./controllers/book.controller.js";
 
 dotenv.config();
 
@@ -91,6 +91,7 @@ app.post("/logout", (req, res) => {
 
 // 인증이 필요한 API
 app.post('/api/book', authenticateJWT, handleAddBook);
+app.get('/api/users/activities', authenticateJWT, handleGetUserActivity);
 
 // 비인증 API
 app.get('/public', (req, res) => {
